fixed body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ h6 {
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    overflow-x:hidden;
+}
+
 .textGradient {
     text-decoration-color: #fc3c11;
     background: -webkit-linear-gradient(180deg, #fc3c11 0%, #ff6f1b 100%);
